[gd_scene load_steps=25 format=3 uid="uid://bofn7ebhpfs3h"]

[ext_resource type="Script" uid="uid://boml7t0xys8sa" path="res://Scene/Object/lingkaran_sihir.gd" id="1_nfj7g"]
[ext_resource type="Texture2D" uid="uid://45kft6x3u7mb" path="res://Asset/Terrain/Object/lingkaran sihir.png" id="2_rcmwj"]
[ext_resource type="Texture2D" uid="uid://m2xnn3pgwn6d" path="res://Asset/Terrain/Object/Light.png" id="3_wnla2"]
[ext_resource type="Texture2D" uid="uid://bn16w2dubqwt3" path="res://Asset/Terrain/Object/light_mask.png" id="4_hxrr5"]
[ext_resource type="AudioStream" uid="uid://bqtderi13xj8q" path="res://Asset/Sounds/fire_sound_effects.mp3" id="5_23caf"]
[ext_resource type="AudioStream" uid="uid://ykrvqfxga1ft" path="res://Asset/Sounds/lingkaran_activated.mp3" id="6_6d5sr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sk76q"]
atlas = ExtResource("2_rcmwj")
region = Rect2(0, 0, 132, 132)

[sub_resource type="SpriteFrames" id="SpriteFrames_lbrl6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk76q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_23caf"]
atlas = ExtResource("3_wnla2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d5sr"]
atlas = ExtResource("3_wnla2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_drhv3"]
atlas = ExtResource("3_wnla2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mighw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23caf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d5sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drhv3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_a0n1j"]
atlas = ExtResource("3_wnla2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_062ct"]
atlas = ExtResource("3_wnla2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vev1i"]
atlas = ExtResource("3_wnla2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnla2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0n1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_062ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vev1i")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wnla2"]
size = Vector2(80, 80)

[sub_resource type="Animation" id="Animation_wnla2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/Cahaya:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/Cahaya2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/Cahaya3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/Cahaya4:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SFX/FireStart:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nfj7g"]
resource_name = "activated"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_hxrr5"]
resource_name = "light_1_collected"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/Cahaya:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FireStart:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_23caf"]
resource_name = "light_2_collected"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/Cahaya2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FireStart:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6d5sr"]
resource_name = "light_3_collected"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/Cahaya3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FireStart:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_drhv3"]
resource_name = "light_4_collected"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/Cahaya4:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/FireStart:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rcmwj"]
_data = {
&"RESET": SubResource("Animation_wnla2"),
&"activated": SubResource("Animation_nfj7g"),
&"light_1_collected": SubResource("Animation_hxrr5"),
&"light_2_collected": SubResource("Animation_23caf"),
&"light_3_collected": SubResource("Animation_6d5sr"),
&"light_4_collected": SubResource("Animation_drhv3")
}

[node name="LingkaranSihir" type="Node2D"]
script = ExtResource("1_nfj7g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lbrl6")

[node name="Cahaya" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(60, 0)
sprite_frames = SubResource("SpriteFrames_mighw")
frame_progress = 0.924665

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D/Cahaya"]
scale = Vector2(0.0433311, 0.0501016)
color = Color(0, 0.611765, 0.560784, 1)
energy = 15.64
texture = ExtResource("4_hxrr5")

[node name="fire1" type="AnimatedSprite2D" parent="AnimatedSprite2D/Cahaya/PointLight2D"]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -500)
scale = Vector2(27.4053, 116.431)
sprite_frames = SubResource("SpriteFrames_wnla2")
frame_progress = 0.567546

[node name="Cahaya2" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(0, 60)
sprite_frames = SubResource("SpriteFrames_mighw")

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D/Cahaya2"]
scale = Vector2(0.0433311, 0.0501016)
color = Color(0, 0.611765, 0.560784, 1)
energy = 15.64
texture = ExtResource("4_hxrr5")

[node name="fire2" type="AnimatedSprite2D" parent="AnimatedSprite2D/Cahaya2/PointLight2D"]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -500)
scale = Vector2(27.4053, 116.431)
sprite_frames = SubResource("SpriteFrames_wnla2")
frame_progress = 0.93836

[node name="Cahaya3" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(-60, 0)
sprite_frames = SubResource("SpriteFrames_mighw")

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D/Cahaya3"]
scale = Vector2(0.0433311, 0.0501016)
color = Color(0, 0.611765, 0.560784, 1)
energy = 15.64
texture = ExtResource("4_hxrr5")

[node name="fire3" type="AnimatedSprite2D" parent="AnimatedSprite2D/Cahaya3/PointLight2D"]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -500)
scale = Vector2(27.4053, 116.431)
sprite_frames = SubResource("SpriteFrames_wnla2")
frame_progress = 0.260798

[node name="Cahaya4" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(0, -60)
sprite_frames = SubResource("SpriteFrames_mighw")

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D/Cahaya4"]
scale = Vector2(0.0433311, 0.0501016)
color = Color(0, 0.611765, 0.560784, 1)
energy = 15.64
texture = ExtResource("4_hxrr5")

[node name="fire4" type="AnimatedSprite2D" parent="AnimatedSprite2D/Cahaya4/PointLight2D"]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -500)
scale = Vector2(27.4053, 116.431)
sprite_frames = SubResource("SpriteFrames_wnla2")
frame_progress = 0.260798

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rcmwj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wnla2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_rcmwj")
}

[node name="SFX" type="Node" parent="."]

[node name="FireStart" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_23caf")
volume_db = -5.0

[node name="Activated" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_6d5sr")
volume_db = -5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
